[gd_scene load_steps=3 format=3 uid="uid://dya5hp8twt46x"]

[ext_resource type="Script" path="res://inventory_slot.gd" id="1_cnc1n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhd1a"]

[node name="InventorySlot" type="Node2D"]
script = ExtResource("1_cnc1n")

[node name="clickbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="clickbox"]
scale = Vector2(1.3, 1.3)
shape = SubResource("RectangleShape2D_rhd1a")

[connection signal="input_event" from="clickbox" to="." method="_on_clickbox_input_event"]
[connection signal="mouse_entered" from="clickbox" to="." method="_on_clickbox_mouse_entered"]
[connection signal="mouse_exited" from="clickbox" to="." method="_on_clickbox_mouse_exited"]
